src/test/compile-fail/import-glob-rename.rs
// error-pattern:expected

import baz = foo::*;

mod foo {
    fn bar() {}
}

fn main() {
}